validation and erros
